# cli-commons-rs

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: error.rs  gitignore.rs  lib.rs
src/author/: mod.rs
src/license/: mod.rs
src/toml/: mod.rs
