[package]
name = "cli-commons"
version = "0.0.0"
authors = ["Julian Siebert <mail@julian-siebert.de>"]
edition = "2024"
description = "Reusable CLI building blocks for spec-driven code generation and publishing tools"
readme = "README.md"
license = "Apache-2.0"
categories = ["accessibility", "command-line-utilities", "development-tools"]
