[package]
name = "cli-commons"
version = "0.1.1"
authors = ["Julian Siebert <mail@julian-siebert.de>"]
edition = "2024"
description = "Reusable CLI building blocks for spec-driven code generation and publishing tools"
readme = "README.md"
license = "Apache-2.0"
categories = ["accessibility", "command-line-utilities", "development-tools"]

[dependencies]
async-trait = "0.1.89"
console = "0.16.3"
dirs = "6.0.0"
indicatif = "0.18.4"
indoc = "2.0.7"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"], optional = true }
miette = { version = "7.6.0", optional = true }
which = { version = "8.0.2", optional = true }
license = { version = "3.8.0", optional = true }
spdx = { version = "0.13.4", optional = true }
toml = { version = "1.1.2", optional = true }

[features]
default = ["miette", "which", "serde", "author", "license", "toml"]
miette = ["dep:miette"]
which = ["dep:which"]
serde = ["dep:serde"]
license = ["dep:license", "dep:spdx", "miette"]
author = ["miette"]
toml = ["serde", "miette", "dep:toml"]
